Fixed layout problems, fixed color in the logo  and added pointer as cursor for links

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
 }
-
 body {
     line-height: 1.4;
     font-family: 'Public Sans', sans-serif;
@@ -13,6 +12,9 @@ body {
 }
 .txt-l{
     font-size: 1.4rem;
+}
+a,button{
+    cursor: pointer;
 }
 /*-----------------------------------------------HEADER SECTION-----------------------------------------*/
 header>.container {
@@ -231,7 +233,7 @@ p.feature-desc{
     color:hsl(233, 8%, 62%);
 }
 p.feature-title{
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     color:#000;
 }
 .feature p,.feature img{
@@ -283,10 +285,13 @@ footer>div{
     background-color:#fff;
 }
 .filter-white{
-    filter: invert(98%) sepia(32%) saturate(3%) hue-rotate(294deg) brightness(116%) contrast(100%);
+    background-color: #fff;
 }
+/* .filter-white{
+    filter: invert(98%) sepia(32%) saturate(3%) hue-rotate(294deg) brightness(116%) contrast(100%);
+} */
 .icons>a>img{
-    /* width: 50%; */
+    width:100px;
     margin:1.5rem 0;
 }
 /* .bottom-section>button{
@@ -415,5 +420,23 @@ footer>div{
     ul li a{
         text-decoration: none;
         color: #000;
+    }
+}
+@media(min-width:377px) and (max-width:766px){
+    .features{
+        flex-wrap: wrap;
+    }
+    .articles{
+        flex-wrap: wrap;
+    }
+    .footer-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .page-links ul{
+        column-gap:10rem;
+    }
+    .icons{
+        margin-bottom: 1rem;
     }
 }
